# NFTM

./: MARG TMG拆解.md  README.md
fastlio2/: CMakeLists.txt  package.xml
fastlio2/config/: lio.yaml
fastlio2/rviz/: fastlio2.rviz
fastlio2/src/: lio_node.cpp
fastlio2/src/map_builder/: commons.h  contact_processor.cpp  contact_processor.h  ieskf.cpp  ieskf.h  imu_processor.cpp  imu_processor.h  lidar_processor.cpp  lidar_processor.h  map_builder.cpp
go2_description/: CMakeLists.txt  package.xml
go2_description/launch/: go2_modified_rviz.launch.py
go2_description/scripts/: fastlio_lidar_to_base_tf.py
nftm_tester/: CMakeLists.txt
nftm_tester/launch/: ego_centric_map.launch.py  ground_height_grid.launch.py  livox_tester.launch.py  realtime_foot_force.launch.py  realtime_foot_z.launch.py
nftm_tester/scripts/: ego_centric_map.py  ground_height_grid.py  livox_tester.py  plot_foot_force.py  realtime_foot_force.py  realtime_foot_z.py
